[tool.poetry]
name = "ws-projeto-01"
version = "0.1.0"
description = "ETL Project"
authors = ["Gustavo Souza"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.11"
pandas = "^2.1.4"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
