[tool.poetry]
name = "ws-projeto-01"
version = "0.1.0"
description = "ETL Project"
authors = ["Gustavo Souza"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.11"
pandas = "^2.1.4"
openpyxl = "^3.1.2"
pytest = "^7.4.3"
isort = "^5.13.2"
blue = "^0.9.1"
taskipy = "^1.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_third_party = []

[tool.taskipy.tasks]
format = "isort . && blue ."
test = "poetry run pytest -v"
